# foxy_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cpp.hint  foxy.sln  icon.rc  setup.bat  shader_compile.bat
apps/: CMakeLists.txt  app.cpp  example_app.cpp  test_app.cpp  test_app.ixx
apps/example_app/: example_app.cpp
cmake/: compile_shaders.cmake  copy_resources.cmake
example/: CMakeLists.txt
example/example_app/: example_app.cpp  example_app.hpp
examples/example_app/: example_app.cpp  example_app.vcxproj  example_app.vcxproj.filters
foxy/: foxy.vcxproj  foxy.vcxproj.filters
foxy/include/foxy/: framework.hpp  macros.hpp
foxy/int/x64_Debug/: app.ixx.ifc  app.ixx.ifc.d.json  app.ixx.ifc.dt  app.ixx.ifc.dt.command  app.ixx.ifc.dt.module.json.command  app.ixx.ifc.isense.dt  app.ixx.ifc.isense.dt.command  app.ixx.ifc.isense.dt.d.json  app.ixx.module.json  context.ixx.ifc.dt.module.json.command  event.ixx.ifc.dt.module.json.command  foxy.hpp_43039C8B5E0CD372.ifc.dt.module.json.command  foxy_includes.hpp_206027D5F2897943.ifc.dt.module.json.command  framework.hpp_16B986F2DA451D76.ifc.dt.d.json  framework.hpp_16B986F2DA451D76.ifc.dt.module.json.command  fxpch.hpp_B644B504BEBB8526.ifc.dt.module.json.command  includes.hpp_C8B919BA6A4149C.ifc.dt.d.json  includes.hpp_C8B919BA6A4149C.ifc.dt.module.json  includes.hpp_C8B919BA6A4149C.ifc.dt.module.json.command  iostream_6T5HU0ZP6HYZKAWK.ifc.d.json  iostream_6T5HU0ZP6HYZKAWK.module.json  iostream_8A395B21A99018A6.ifc.dt.command  iostream_8A395B21A99018A6.ifc.dt.module.json.command  iostream_8A395B21A99018A6.ifc.isense.dt.command  log.ixx.ifc.dt.module.json.command  log_macros.hpp_4F29EA21582FDB8C.ifc.dt.module.json.command  (+11 more)
include/foxy/: foxy.hpp  foxy_includes.hpp  framework.hpp  fxpch.hpp  inferno.hpp  koyote.hpp  log_macros.hpp  macros.hpp  neko.hpp  ookami.hpp
res/foxy/: log_config.conf
res/foxy_cpp/: log_config.conf
src/: CMakeLists.txt  app.ixx  icon.rc  lib.ixx
src/api/: context.cpp  context.ixx
src/api/vulkan/: context.ixx  renderer.ixx  swapchain.ixx
src/core/: app.cpp  app.ixx  window.cpp  window.ixx
src/core/event_system/: event.cpp  event.ixx
src/foxy/: CMakeLists.txt  app.cpp  app.hpp
src/foxy/api/glfw/: context.cpp  context.hpp  glfw.cpp  glfw.hpp  unique_window.cpp
src/foxy/api/vulkan/: context.cpp  context.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  version.hpp  vulkan.hpp
src/foxy/core/: app.cpp  app.hpp  window.cpp  window.hpp
src/foxy/core/event_system/: event.hpp
src/foxy/core/events/: event.hpp
src/foxy/core/threading/: job_system.cpp  job_system.hpp
src/foxy/core/window/glfw/: context.cpp  context.hpp  glfw.hpp  glfw_context.cpp  glfw_context.hpp  unique_window.cpp  unique_window.hpp
src/foxy/foxy/: app.cpp  app.hpp
src/foxy/koyote/: ecs.cpp  ecs.hpp
src/foxy/koyote/components/: camera.cpp  component.cpp  transform.hpp
src/foxy/koyote/systems/: camera_system.cpp  camera_system.hpp  render_system.cpp
src/foxy/ookami/: renderer.cpp  renderer.hpp
src/foxy/ookami/vulkan/: context.cpp  context.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  version.hpp  vulkan.hpp  vulkan_context.cpp  vulkan_context.hpp
src/foxy/util/: log.hpp  time.hpp  util.cpp  util.hpp
src/foxy_framework/: CMakeLists.txt
src/foxy_framework/foxy/: app.cpp  app.hpp  foxy_config.hpp.in  version.hpp
src/foxy_framework/foxy/internal/: foxy_pch.hpp  includes.hpp
src/inferno/: CMakeLists.txt
src/inferno/inferno/: window.cpp  window.hpp
src/inferno/inferno/event/: event.hpp
src/inferno/inferno/glfw/: context.cpp  context.hpp  glfw.cpp  glfw.hpp
src/inferno/inferno/internal/: includes.hpp
src/inferno_window_library/: CMakeLists.txt
src/inferno_window_library/inferno/: window.cpp  window.hpp
src/inferno_window_library/inferno/glfw/: context.cpp  context.hpp  glfw.cpp  glfw.hpp
src/koyote/: CMakeLists.txt
src/koyote/koyote/: utilities.hpp
src/koyote/koyote/core/: event.hpp  glm.hpp  log.cpp  log.hpp  macros.hpp  ring_buffer.cpp  ring_buffer.hpp  std.cpp  std.hpp  time.cpp  time.hpp
src/koyote_utility/: CMakeLists.txt
src/koyote_utility/koyote/: pimpl_impl.hpp
src/koyote_utility/koyote/core/: event.hpp  log.cpp  log.hpp  std.cpp  std.hpp  time.cpp  time.hpp
src/neko/: CMakeLists.txt
src/neko/inu/: job_system.cpp
src/neko_ecs/: CMakeLists.txt
src/neko_ecs/inu/: job_system.cpp  job_system.hpp
src/neko_ecs/neko/: component.cpp  component.hpp  ecs.cpp  ecs.hpp  entity.cpp  entity.hpp  system.cpp  system.hpp
src/neko_ecs/neko/components/: name.hpp
src/neko_ecs/neko/internal/: includes.hpp
src/neko_ecs/neko/old/: ecs.cpp  ecs.hpp
src/neko_ecs/neko/old/components/: camera.hpp  component.hpp  mesh.hpp
src/neko_ecs/neko/old/systems/: render_system.hpp
src/ookami/: CMakeLists.txt
src/ookami/ookami/: render_engine.cpp  render_engine.hpp
src/ookami/ookami/vulkan/: context.cpp  context.hpp  glsl_shader.cpp  glsl_shader.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  version.hpp  vulkan.hpp
src/ookami_render_engine/: CMakeLists.txt
src/ookami_render_engine/ookami/: render_engine.cpp  render_engine.hpp
src/ookami_render_engine/ookami/core/: context.cpp  context.hpp  low_level_renderer.cpp  low_level_renderer.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  vulkan.hpp
src/ookami_render_engine/ookami/vulkan/: context.cpp  context.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  version.hpp
src/ookami_render_engine/vulkan_static/: CMakeLists.txt
src/ookami_render_engine/vulkan_static/include/vulkan/: glslang.hpp  static.hpp
src/util/: log.cpp  log.ixx  util.ixx  wait.ixx
src/vulkan_static/: CMakeLists.txt
src/vulkan_static/include/vulkan/: static.hpp
src/vulkan_static/include/vulkan/internal/: static.cpp
src/vulkan_static/src/: CMakeLists.txt
src/vulkan_static/src/internal/: include.hpp
src/vulkan_static/src/vulkan/: lib.hpp  version.hpp
(+49 files in other folders)
