cmake_minimum_required(VERSION 3.24)
#set(CMAKE_CXX_STANDARD 23)

# ===================================================
# SUBDIRECTORIES
# ===================================================
add_subdirectory(koyote)
add_subdirectory(inferno)
add_subdirectory(neko)
add_subdirectory(ookami)
add_subdirectory(foxy)