cmake_minimum_required(VERSION 3.24)
#set(CMAKE_CXX_STANDARD 23)

# ===================================================
# SUBDIRECTORIES
# ===================================================
add_subdirectory(inferno_window_library)
add_subdirectory(neko_ecs)
add_subdirectory(ookami_render_engine)
add_subdirectory(foxy_framework)
